# dbi-cancer-research

./: .gitignore  Doku.adoc  README.adoc  README.md  setup.sh  start.sh
asciidocs/plantuml/: cancer.puml
cicd/: build_gh_pages.sh
data/syn-leth/: Mouse_SL.csv  Worm_SL.csv  Yeast_SL.csv
docs/: README.adoc  documentation-cancer-research.adoc
docs/plantuml/: architecture.puml  cancer.puml
parsing/: setup.sh
parsing/data/oma/: mouse-mapping.csv  yeast-mapping.csv
parsing/setup-db/: go.mod  main.go
setup-db/: .gitignore  go.mod  main.go
sql/: STATEMENTS.sql  create.sql  insert.sql
transform/: .env  Cargo.toml
transform/src/: main.rs  models.rs
transform/src/model/: app_state.rs  mod.rs
visualize/: Cargo.toml  index.html
visualize/src/: lib.rs  main.rs
