[package]
name = "transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "any", "postgres", "bigdecimal"] }
