[package]
name = "visualize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
leptos = { version = "0.5.2", features = ["csr"] }
reqwasm = "0.5.0"
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
